--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "node-uuid": "^1.4.7",
     "nodemailer": "^1.11.0",
     "nodemailer-smtp-transport": "^1.1.0",
+    "nodemon": "^1.11.0",
     "optimist": "^0.6.1",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
@@ -38,7 +39,7 @@
   },
   "scripts": {
     "test": "node node_modules/mocha/bin/mocha --recursive t/*",
-    "start": "node bin/wwww",
-    "db-update" : "node node_modules/.bin/sequelize db:migrate --config=config/db.json --models-path=lib/model/db/"
+    "start": "nodemon bin/wwww",
+    "db-update": "node node_modules/.bin/sequelize db:migrate --config=config/db.json --models-path=lib/model/db/"
   }
 }
